fix handles jumping bug on windows

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
     background-color:black;
     padding:0px;
     margin:0px;
+    top:0px;
+    left:0px;
+    height:100%;
+    width:100%;
 }
 
 #controls{
